# neuq_rm

./: README.md  down.rar
down/APP/angle_pid/: angle_pid.c  angle_pid.h
down/APP/json/: json.c  json.h
down/APP/judge/: judge.c  judge.h
down/APP/kinematic/: kinematic.c  kinematic.h
down/APP/mode/: mode.c  mode.h
down/APP/speed_pid/: speed_pid.c  speed_pid.h
down/BSP/can/: can.c  can.h
down/BSP/timer/: timer.c  timer.h
down/BSP/usart/: bsp_imu_usart.c  bsp_imu_usart.h  bsp_uart7.c  bsp_uart7.h  uart5.c  uart5.h
down/Doc/: 说明.txt
down/Hardware/BUZZER/: buzzer.c  buzzer.h
down/Hardware/DJi_remote/: Dji_remote.h
down/Hardware/FS_remote/: FS_remote.c  FS_remote.h
down/Hardware/LED/: LED.c
down/Hardware/STMFLASH/: stmflash.c
down/Hardware/TIM3_Events/: Tim3_Events.c
down/Hardware/flash/: myflash.h
down/Hardware/fric/: fric.c  fric.h
down/Hardware/gimbal/: gimbal.c  gimbal.h
down/Hardware/imuReader/: imuReader.c  imuReader.h
down/Hardware/key/: key.c
down/Hardware/motor/: motor.c  motor.h
down/Hardware/power/: power.c
down/Hardware/power_limitation/: power_limitation.c  power_limitation.h
down/Hardware/remote_code/: remote_code.c  remote_code.h
down/Listing/: RM_typeA.map  startup_stm32f427_437xx.lst
down/Output/: RM-F427_底盘.dep  RM_typeA.axf  RM_typeA.build_log.htm  RM_typeA.htm  RM_typeA.lnp  angle_pid.crf  angle_pid.d  bsp_debug_usart.crf  bsp_debug_usart.d  bsp_uart7.crf  bsp_uart7.d  buzzer.d  can.crf  can.d  delay.crf  delay.d  dji_remote.crf  dji_remote.d  fric.crf  fric.d  fs_remote.crf  fs_remote.d  gimbal.crf  gimbal.d  jansson_config.crf  jansson_config.d  json.crf  json.d  judge.crf  judge.d  key.crf  key.d  kinematic.crf  kinematic.d  led.crf  led.d  main.crf  main.d  misc.crf  misc.d  (+80 more)
down/Project/: JLinkLog.txt  RM-F427.uvguix.DELL  RM-F427.uvguix.lagrange  RM-F427.uvguix.qsy  RM-F427.uvguix.zhuge  RM-F427.uvoptx  RM-F427.uvprojx
down/Project/RTE/_____/: RTE_Components.h
down/User/: main.c  stm32f4xx_it.c
down/User/Init/: My_Init.c  My_Init.h
down/User/delay/: delay.h
down/User/sys/: sys.c
up/: readme.md
up/gazebo_PKspace/rm_2v2/urdf/: rm_2v2.urdf
up/gazebo_PKspace/rm_single/: CMakeLists.txt  package.xml
up/gazebo_PKspace/rm_single/config/: joint_names_rm_single.yaml
up/gazebo_PKspace/rm_single/launch/: display.launch  gazebo.launch
up/gazebo_PKspace/rm_single/meshes/: base_link.STL  link_spinning.STL
up/gazebo_PKspace/rm_single/urdf/: rm_single.csv  rm_single.urdf
up/gazebo_PKspace/rm_single_1402/: CMakeLists.txt  package.xml  urdf.rviz
up/gazebo_PKspace/rm_single_1402/config/: config.rviz  joint_names_rm_single_1402.yaml
up/gazebo_PKspace/rm_single_1402/launch/: display.launch  gazebo.launch
up/gazebo_PKspace/rm_single_1402/meshes/: base.STL  link_base.STL  link_body.STL  link_shield.STL  link_signal.STL  link_switch.STL  link_twinkle.STL
up/gazebo_PKspace/rm_single_1402/urdf/: rm_single_1402.csv  rm_single_1402.urdf
up/liantiaonew/: 无标题文档
up/liantiaonew/devel/: .catkin  setup.sh
up/liantiaonew/devel/include/hkvs/: square.h  vel.h
up/liantiaonew/devel/lib/hkvs/: ArmorDetector  hkvs_pub  kuangjia  main  tyj
up/liantiaonew/devel/lib/hkvs_cam/: hkvs_cam_node
up/liantiaonew/devel/lib/pkgconfig/: hkvs.pc  hkvs_cam.pc  teleopaserial.pc
up/liantiaonew/src/hkvs/: CMakeLists.txt
up/liantiaonew/src/hkvs/msg/: vel.msg
up/liantiaonew/src/hkvs/src/: ArmorDetector.cpp  ArmorDetector.h  control_node_sub.cpp  hkvs_pub.cpp  kuangjia.cpp  main.cpp  position.cpp  serialfirst.py  teleop.py  tyj.cpp
up/liantiaonew/src/hkvs_cam/: CMakeLists.txt
up/liantiaonew/src/hkvs_cam/camera_info/: head_camera.yaml
up/liantiaonew/src/hkvs_cam/include/hkvs_cam/: usb_cam.h
up/liantiaonew/src/hkvs_cam/launch/: usb_cam-test.launch
up/liantiaonew/src/hkvs_cam/nodes/: hkvs_cam_node.cpp
up/liantiaonew/src/hkvs_cam/src/: hkvs_cam.cpp
up/liantiaonew/src/paddle/: CMakeLists.txt  package.xml
up/liantiaonew/src/paddle/include/: ._paddle_use_passes.h
up/liantiaonew/src/paddle/src/: object_detection_demo.cc
up/position/: out_camera_data.xml  reademe.md
up/position/cfg/: position.cfg
up/position/msg/: square.msg
up/position/src/: cfgposition.cpp  position.cpp
up/rm_description/: CMakeLists.txt  package.xml
up/rm_description/launch/: neuq_rm.launch  rviz.launch
up/rm_description/src/: gazebo_teleop.cpp
up/rm_description/urdf/: neuq_rm.xacro  rviz.xacro
up/teleopaserial/: CMakeLists.txt
up/teleopaserial/cfg/: serial.cfg
up/teleopaserial/docs/: serialConfig-usage.dox  serialConfig.dox  serialConfig.wikidoc
up/teleopaserial/src/: hehe.py  hehe状态机备用.py  serial1.py  serial123.py  serialfirst.py  teleop.py  teleop_key.cpp
up/visual/: reademe.md
up/visual/hkvs/: CMakeLists.txt  package.xml
up/visual/hkvs/launch/: hkvs_pub.launch
up/visual/hkvs/src/: ImageProcess.cpp  circle.cpp  hkvs_light.cpp  hkvs_pub.cpp  hkvs_sub.cpp  hkvs_test.cpp
up/zhidao/: reademe.md
up/zhidao/cfg/: sap.cfg
up/zhidao/scripts/: abcd.py
up/zhidao/src/: guide.cpp  jingzhi.cpp  sap.cpp  teleop.cpp  tf2.py  zhidao.h
哨兵1/APP/angle_pid/: angle_pid.c  angle_pid.h
哨兵1/APP/json/: json.c  json.h
哨兵1/APP/judge/: judge.h
哨兵1/APP/kinematic/: kinematic.c
哨兵1/APP/mode/: mode.h
哨兵1/APP/speed_pid/: speed_pid.c  speed_pid.h
哨兵1/BSP/timer/: timer.c  timer.h
哨兵1/BSP/usart/: bsp_debug_usart.c  bsp_debug_usart.h  bsp_imu_usart.c
哨兵1/Hardware/DJi_remote/: DJi_remote.c
哨兵1/Hardware/LED/: LED.h
哨兵1/Hardware/STMFLASH/: stmflash.h
哨兵1/Hardware/TIM3_Events/: Tim3_Events.c  Tim3_Events.h
哨兵1/Hardware/flash/: myflash.c
哨兵1/Hardware/key/: key.h
哨兵1/Hardware/motor/: motor.c  motor.h
哨兵1/Hardware/power/: power.h
哨兵1/Hardware/power_limitation/: power_limitation.h
哨兵1/Hardware/remote_code/: remote_code.c  remote_code.h
哨兵1/Project/: RM-F427.uvguix.Administrator  RM-F427.uvguix.DELL  RM-F427.uvguix.Thinkpad  RM-F427.uvguix.lagrange  RM-F427.uvguix.qsy  RM-F427.uvoptx  RM-F427.uvprojx
哨兵1/User/: main.c  stm32f4xx_it.c
哨兵1/User/Init/: My_Init.c
哨兵1/User/delay/: delay.c
(+29 files in other folders)
